syntax = "proto3";

import "metadata.proto";

package keyval;

message StoreName {
    string value = 1;
}


message StoreKey {
    repeated float key = 1;
}

message StoreInput {
    oneof value {
        string raw_string = 2;
        bytes image = 3;
    }


}

// A single entry for a store containing a key and its associated metadata values.
message StoreEntry {
    StoreKey key = 1;
    StoreValue value = 2;
}

message StoreValue {
    map<string, metadata.MetadataValue> value = 1;
}
